# inspect

./: Cargo.toml  README.md
inspect/: Cargo.toml
inspect/src/: lib.rs
inspect/src/type_info/: discriminant_erased.rs  display.rs  impls.rs  internal.rs  methods.rs  mod.rs
inspect/tests/: builtin.rs  enums.rs  structs.rs
inspect_derive/: Cargo.toml
inspect_derive/src/: lib.rs
inspect_derive/src/type_info/: enums.rs  make_static.rs  mod.rs  structs.rs
