[workspace]
resolver = "2"
members = ["inspect", "inspect_derive"]

[workspace.lints]
rust.unsafe_op_in_unsafe_fn = "deny"
clippy.new_without_default = "allow"

[workspace.dependencies]
inspect.path = "./inspect"
inspect_derive.path = "./inspect_derive"

disqualified = "1.0"
memoffset = "0.9.1"
parking_lot = "0.12.3"
paste = "1.0.15"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
