[package]
name = "inspect"
version = "0.0.0"
edition = "2021"
authors = ["ickk <crates@ickk.io>"]
publish = false

[lints]
workspace = true

[features]
default = ["derive"]
derive = ["dep:inspect_derive"]

[dependencies]
inspect_derive = { workspace = true, optional = true }

disqualified.workspace = true
memoffset.workspace = true
parking_lot.workspace = true

[dev-dependencies]
inspect_derive.workspace = true
paste.workspace = true
